--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,9 @@ body {
   }
 
 .heading {
-  position: absolute;
-  top: 60px;
-  left: 60px;
+    position: absolute;
+    top: 60px;
+    left: 60px;
     font-family: 'DM Mono';
     font-weight: 500;
     color: rgb(255, 255, 255);
@@ -35,7 +35,9 @@ body {
     position: absolute;
     top: 140px;
     left: 60px;
+    max-width: 430px;
     font-family: 'DM Mono';
     font-weight: 300;
+    line-height: 26px;
     color: white;
   }
