--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,102 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap');
 * {
     -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-  }
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body {
     background-color: rgb(255, 255, 255);
-  }
+}
 
-.heading {
-    position: absolute;
-    top: 60px;
-    left: 60px;
-    font-family: 'DM Mono';
-    font-weight: 500;
-    color: rgb(255, 255, 255);
-    font-size: 40px;
-  }
-
-  body, html {
+body,
+html {
     height: 100%;
     margin: 0;
-  }
-  
-  .bg {
+}
+
+
+/* Extra small devices (phones, 600px and down) */
+
+@media only screen and (max-width: 600px) {
+    .heading {
+        position: absolute;
+        top: 60px;
+        left: 60px;
+        font-family: 'DM Mono';
+        font-weight: 500;
+        color: rgb(255, 255, 255);
+        font-size: 28px;
+    }
+    .description {
+        position: absolute;
+        top: 140px;
+        left: 60px;
+        max-width: 430px;
+        font-family: 'DM Mono';
+        font-weight: 300;
+        line-height: 26px;
+        color: white;
+        font-size: 14px;
+    }
+}
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+
+@media only screen and (min-width: 768px) {
+    .heading {
+        position: absolute;
+        top: 60px;
+        left: 60px;
+        font-family: 'DM Mono';
+        font-weight: 500;
+        color: rgb(255, 255, 255);
+        font-size: 40px;
+    }
+    .description {
+        position: absolute;
+        top: 140px;
+        left: 60px;
+        max-width: 430px;
+        font-family: 'DM Mono';
+        font-weight: 300;
+        line-height: 26px;
+        color: white;
+        font-size: 16px;
+    }
+}
+
+
+/* Large devices (laptops/desktops, 992px and up) */
+
+@media only screen and (min-width: 992px) {
+    .heading {
+        position: absolute;
+        top: 60px;
+        left: 60px;
+        font-family: 'DM Mono';
+        font-weight: 500;
+        color: rgb(255, 255, 255);
+        font-size: 40px;
+    }
+    .description {
+        position: absolute;
+        top: 140px;
+        left: 60px;
+        max-width: 430px;
+        font-family: 'DM Mono';
+        font-weight: 300;
+        line-height: 26px;
+        color: white;
+        font-size: 16px;
+    }
+}
+
+.bg {
     background-image: url("clouds.jpg");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  }
-
-  .description {
-    position: absolute;
-    top: 140px;
-    left: 60px;
-    max-width: 430px;
-    font-family: 'DM Mono';
-    font-weight: 300;
-    line-height: 26px;
-    color: white;
-  }
+}
