--- a/styles.css
+++ b/styles.css
@@ -42,35 +42,9 @@ html {
 }
 
 
-/* Medium devices (landscape tablets, 768px and up) */
+/* Medium and large devices (tablets/laptops/desktops, 600px and up) */
 
-@media only screen and (min-width: 768px) {
-    .heading {
-        position: absolute;
-        top: 60px;
-        left: 60px;
-        font-family: 'DM Mono';
-        font-weight: 500;
-        color: rgb(255, 255, 255);
-        font-size: 40px;
-    }
-    .description {
-        position: absolute;
-        top: 140px;
-        left: 60px;
-        max-width: 430px;
-        font-family: 'DM Mono';
-        font-weight: 300;
-        line-height: 26px;
-        color: white;
-        font-size: 16px;
-    }
-}
-
-
-/* Large devices (laptops/desktops, 992px and up) */
-
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 600px) {
     .heading {
         position: absolute;
         top: 60px;
