--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ html {
         font-size: 28px;
     }
     .description {
+        max-width: 500px;
         padding-top: 40px;
         padding-left: 40px;
         padding-right: 40px;
@@ -54,6 +55,7 @@ html {
         font-size: 40px;
     }
     .description {
+        max-width: 500px;
         padding-top: 40px;
         padding-left: 40px;
         padding-right: 40px;
