--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,12 @@
 }
 
 body {
-    background-color: rgb(0, 0, 0);
+    margin: 0;
+    height: 100vh;
 }
 
-body,
-html {
-    height: 100%;
-    margin: 0;
+canvas {
+    display: block;
 }
 
 
@@ -25,7 +24,7 @@ html {
         padding-right: 40px;
         font-family: 'DM Mono';
         font-weight: 500;
-        color: white;
+        color: black;
         font-size: 28px;
     }
     .description {
@@ -36,7 +35,7 @@ html {
         font-family: 'DM Mono';
         font-weight: 300;
         line-height: 26px;
-        color: white;
+        color: black;
         font-size: 14px;
     }
 }
@@ -46,6 +45,7 @@ html {
 
 @media only screen and (min-width: 600px) {
     .heading {
+        position: absolute;
         padding-top: 40px;
         padding-left: 40px;
         padding-right: 40px;
@@ -55,6 +55,8 @@ html {
         font-size: 40px;
     }
     .description {
+        position: absolute;
+        top: 80px;
         max-width: 500px;
         padding-top: 40px;
         padding-left: 40px;
