Styling changes - changed font

--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -3,8 +3,9 @@
     padding-bottom: 4vw;
     padding-top: 6vw;
     padding-bottom: 6vw;
-    width: 90vw;
-    font-size: 64px;
-    line-height: 120%;
-    letter-spacing: -0.04em;
+    width: 70vw;
+    font-size: 4rem;
+    font-weight: 500;
+    line-height: 1.232;
+    letter-spacing: 0em;
 }
