--- a/src/styles/header-logo.scss
+++ b/src/styles/header-logo.scss
@@ -1,6 +1,6 @@
 .nav-logo>a {
     color: #110B11;
     text-decoration: none;
-    font-size: 32px;
-    letter-spacing: -0.01em;
+    font-size: 28px;
+    letter-spacing: normal;
 }
