--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,14 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap");
-$font: "Karla",
--apple-system,
-BlinkMacSystemFont,
-"Segoe UI",
-Roboto,
-Oxygen,
-Ubuntu,
-Cantarell,
-"Open Sans",
-"Helvetica Neue",
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+$font: "Inter",
 sans-serif;
 //Colors
 $white: #fff;
@@ -16,6 +7,7 @@ $off-white: #f2f2f2;
 $black: #110b11;
 $orange: #f2994a;
 * {
+    -webkit-font-smoothing: antialiased;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
