--- a/src/styles/project-card.scss
+++ b/src/styles/project-card.scss
@@ -12,6 +12,7 @@
     color: #110B11;
     text-decoration: none;
     font-size: 24px;
+    font-weight: 500;
     line-height: 1.5;
     padding-top: 12px;
 }
