--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -1,11 +1,20 @@
+.banner {
+    display: flex;
+    flex-direction: column;
+}
+
 .banner-text {
-    padding-left: 4vw;
-    padding-bottom: 4vw;
-    padding-top: 6vw;
-    padding-bottom: 6vw;
+    padding-left: 12vw;
+    padding-top: 5vw;
     width: 70vw;
     font-size: 4rem;
     font-weight: 500;
     line-height: 1.232;
     letter-spacing: 0em;
+}
+
+.banner-image {
+    object-fit: cover;
+    width: 100%;
+    min-height: 100vh;
 }
