--- a/src/styles/header-nav-item.scss
+++ b/src/styles/header-nav-item.scss
@@ -1,20 +1,24 @@
 .nav-link>a {
-    font-size: 18px;
-    color: #110B11;
+    font-size: 16px;
+    color: #000;
     text-decoration: none;
+    opacity: 1;
+    transition: opacity 400ms ease-out;
 }
 
 .nav-link>a:hover {
-    text-decoration: underline;
+    opacity: 0.5;
 }
 
 .nav-action>a {
-    color: #110B11;
+    color: #000;
     text-decoration: none;
+    opacity: 1;
+    transition: opacity 400ms ease-out;
 }
 
 .nav-action>a:hover {
-    text-decoration: underline;
+    opacity: 0.5;
 }
 
 .selected>a {
