--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -5,7 +5,7 @@
 
 .banner-text {
     padding-left: 12vw;
-    padding-top: 5vw;
+    padding-top: 4vw;
     width: 70vw;
     font-size: 4rem;
     font-weight: 500;
@@ -14,6 +14,7 @@
 }
 
 .banner-image {
+    padding-top: 80px;
     object-fit: cover;
     width: 100%;
     min-height: 100vh;
