--- a/src/styles/header-nav-item.scss
+++ b/src/styles/header-nav-item.scss
@@ -22,5 +22,10 @@
 }
 
 .selected>a {
-    font-weight: bold;
+    padding-bottom: 8px;
+    background-repeat: repeat-x;
+    background-image: linear-gradient(to right, currentColor 100%, currentColor 0);
+    background-size: 1px 1px;
+    background-position: 0 calc(100% - 0.1em);
+    white-space: initial;
 }
