--- a/src/styles/header-logo.scss
+++ b/src/styles/header-logo.scss
@@ -1,7 +1,8 @@
 .nav-logo>a {
     color: #000;
     text-decoration: none;
-    font-size: 28px;
+    font-size: 24px;
+    font-weight: 500;
     letter-spacing: normal;
     opacity: 1;
     transition: opacity 400ms ease-out;
