fixed project grid

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -23,8 +23,8 @@ body {
     margin: 0 auto;
     padding: 4vw;
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    grid-column-gap: 90px;
-    grid-row-gap: 65px;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 40px;
+    grid-row-gap: 40px;
     grid-auto-rows: min-content;
 }
