--- a/src/styles/project-card.scss
+++ b/src/styles/project-card.scss
@@ -1,11 +1,26 @@
+.project-card {
+    // display: flex;
+    // flex-direction: column;
+    opacity: 1;
+    transition: opacity 400ms ease-out;
+}
+
+.project-card:hover {
+    opacity: 0.7;
+}
+
 .project-card>a {
     text-decoration: none;
 }
 
+.card-image {
+    height: 30vw;
+}
+
 .card-image>img {
-    object-fit: cover;
     width: 100%;
-    max-height: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .card-title {
@@ -14,5 +29,5 @@
     font-size: 24px;
     font-weight: 500;
     line-height: 1.5;
-    padding-top: 12px;
+    padding-top: 20px;
 }
