--- a/src/styles/project-card.scss
+++ b/src/styles/project-card.scss
@@ -14,7 +14,7 @@
 }
 
 .card-image {
-    height: 30vw;
+    height: 35vw;
 }
 
 .card-image>img {
@@ -30,4 +30,5 @@
     font-weight: 500;
     line-height: 1.5;
     padding-top: 20px;
+    padding-bottom: 12px;
 }
