--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,3 +28,19 @@ body {
     grid-row-gap: 40px;
     grid-auto-rows: min-content;
 }
+
+.recent-work {
+    padding-left: 10vw;
+    padding-top: 4vw;
+    padding-bottom: 3vw;
+}
+
+.work-together {
+    padding-left: 10vw;
+    padding-top: 4vw;
+    padding-bottom: 3vw;
+}
+
+.cta-button {
+    margin-top: 32px;
+}
