--- a/src/styles/header-nav-item.scss
+++ b/src/styles/header-nav-item.scss
@@ -1,4 +1,5 @@
-.nav-link>a {
+.nav-link>a,
+.nav-action>a {
     font-size: 16px;
     color: #000;
     text-decoration: none;
@@ -6,17 +7,7 @@
     transition: opacity 400ms ease-out;
 }
 
-.nav-link>a:hover {
-    opacity: 0.5;
-}
-
-.nav-action>a {
-    color: #000;
-    text-decoration: none;
-    opacity: 1;
-    transition: opacity 400ms ease-out;
-}
-
+.nav-link>a:hover,
 .nav-action>a:hover {
     opacity: 0.5;
 }
