--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,10 +2,6 @@
 $font: "Inter",
 sans-serif;
 //Colors
-$white: #fff;
-$off-white: #f2f2f2;
-$black: #110b11;
-$orange: #f2994a;
 * {
     -webkit-font-smoothing: antialiased;
     box-sizing: border-box;
@@ -19,6 +15,40 @@ body {
     font-size: 16px;
 }
 
+.banner {
+    display: flex;
+    flex-direction: column;
+}
+
+.banner-title {
+    margin-top: 3.3vw;
+    margin-left: 10vw;
+    width: 60vw;
+}
+
+.banner-image {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
+.work-section {
+    margin-left: 10vw;
+    margin-top: 4.4vw;
+    margin-bottom: 2.8vw;
+}
+
+.work-heading {
+    width: 50vw;
+}
+
+.work-body {
+    width: 40vw;
+    margin-top: 28px;
+}
+
 .project-grid {
     margin: 0 auto;
     padding: 4vw;
@@ -29,18 +59,28 @@ body {
     grid-auto-rows: min-content;
 }
 
-.recent-work {
-    padding-left: 10vw;
-    padding-top: 4vw;
-    padding-bottom: 3vw;
+.contact-section {
+    display: flex;
+    flex-direction: column;
+    background-color: #1f1f1f;
+    // margin-top: 2.8vw;
+    // margin-bottom: 2.8vw;
+    padding-top: 160px;
+    padding-bottom: 160px;
 }
 
-.work-together {
-    padding-left: 10vw;
-    padding-top: 4vw;
-    padding-bottom: 3vw;
+.contact-heading {
+    margin-left: 10vw;
+    width: 50vw;
 }
 
-.cta-button {
+.contact-body {
+    margin-left: 10vw;
+    width: 40vw;
+    margin-top: 28px;
+}
+
+.contact-button {
+    margin-left: 10vw;
     margin-top: 32px;
 }
