--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,8 +27,10 @@ body {
 }
 
 .banner-image {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 80px;
+}
+
+.banner-image>img {
     width: 100%;
     height: 100vh;
     object-fit: cover;
@@ -63,8 +65,6 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #1f1f1f;
-    // margin-top: 2.8vw;
-    // margin-bottom: 2.8vw;
     padding-top: 160px;
     padding-bottom: 160px;
 }
