increase project header padding

--- a/src/styles/text-styles.scss
+++ b/src/styles/text-styles.scss
@@ -35,3 +35,11 @@
     line-height: 1.2;
     letter-spacing: 0em;
 }
+
+.heading3 {
+    color: #110B11;
+    font-size: 2.2rem;
+    font-weight: 500;
+    line-height: 1.3;
+    letter-spacing: 0em;
+}
