--- a/src/styles/project-x.scss
+++ b/src/styles/project-x.scss
@@ -1,8 +1,8 @@
 .project-header {
     margin: 0 auto;
-    padding: 4vw;
+    padding: 4vw 10vw;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 60px;
+    column-gap: 80px;
     grid-auto-rows: min-content;
 }
