--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,9 +5,29 @@
     align-items: center;
     padding-left: 4vw;
     padding-right: 4vw;
-    .header-nav {
-        display: grid;
-        grid-template-columns: repeat(4, auto);
-        grid-column-gap: 40px;
-    }
+}
+
+.header-nav {
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    grid-column-gap: 40px;
+}
+
+.social-media {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-column-gap: 0px;
+}
+
+.social-media>a {
+    display: flex;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    opacity: 1;
+    transition: opacity 400ms ease-out;
+}
+
+.social-media>a:hover {
+    opacity: 0.5;
 }
