add social media icons to header and footer

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,7 +1,13 @@
 .footer-component {
     margin: auto;
+    padding-left: 4vw;
+    padding-right: 4vw;
     text-align: center;
     background-color: #F5F5F5;
     padding-top: 80px;
     padding-bottom: 80px;
+}
+
+.social-media-wrapper {
+    margin-bottom: 20px;
 }
