--- a/src/styles/sketchbook.scss
+++ b/src/styles/sketchbook.scss
@@ -1,8 +1,15 @@
+.persistent-text {
+    margin-top: 3.3vw;
+    margin-left: 10vw;
+    width: 80vw;
+    ;
+}
+
 .my-masonry-grid {
     display: flex;
     margin-left: 4vw;
     margin-right: 2vw;
-    margin-top: 4vw;
+    margin-top: 80px;
     margin-bottom: 4vw;
 }
 
@@ -10,6 +17,7 @@
     margin-right: 2vw;
     /* gutter size */
     background-clip: padding-box;
+    z-index: 10;
 }
 
 
@@ -25,5 +33,11 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    background: grey;
+}
+
+.my-masonry-grid_column>div>video {
+    /* change div to reference your elements you put in <Masonry> */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
