--- a/src/styles/header-nav-item.scss
+++ b/src/styles/header-nav-item.scss
@@ -1,5 +1,11 @@
+@font-face {
+    font-family: "Nimbus-Sans-Regular-Extended";
+    src: url("../fonts/Nimbus-Sans-Regular-Extended.ttf");
+}
+
 .nav-link>a,
 .nav-action>a {
+    font-family: 'Nimbus-Sans-Regular-Extended', sans-serif;
     font-size: 16px;
     color: #000;
     text-decoration: none;
