--- a/src/styles/primary-button.scss
+++ b/src/styles/primary-button.scss
@@ -2,9 +2,9 @@
     display: inline-block;
     text-decoration: none;
     color: white;
-    font-family: "Inter", sans-serif;
+    font-family: "Nimbus-Sans-Regular-Extended", sans-serif;
     font-size: 18px;
-    font-weight: 500;
+    // font-weight: 500;
     padding: 28px 60px;
     background-color: black;
     opacity: 1;
@@ -15,7 +15,7 @@
     display: inline-block;
     text-decoration: none;
     color: black;
-    font-family: "Inter", sans-serif;
+    font-family: "Nimbus-Sans-Regular-Extended", sans-serif;
     font-size: 18px;
     font-weight: 500;
     padding: 28px 60px;
