--- a/src/styles/text-styles.scss
+++ b/src/styles/text-styles.scss
@@ -1,39 +1,41 @@
-.body-white {
-    color: #ffffff;
+.body-white,
+.body-black {
+    font-family: 'Nimbus-Sans-Regular', sans-serif;
     font-size: 1rem;
     line-height: 1.8;
     letter-spacing: 0em;
+}
+
+.body-white {
+    color: #ffffff;
 }
 
 .body-black {
     color: #110B11;
-    font-size: 1rem;
-    line-height: 1.8;
-    letter-spacing: 0em;
 }
 
 .heading1 {
+    font-family: 'Nimbus-Sans-Regular-Extended', sans-serif;
     color: #110B11;
-    font-size: 4rem;
-    font-weight: 500;
-    line-height: 1.232;
+    font-size: 5rem;
+    line-height: 1.1;
+    letter-spacing: 0em;
+}
+
+.heading2-white,
+.heading2-black {
+    font-family: 'Nimbus-Sans-Regular-Extended', sans-serif;
+    font-size: 2.8rem;
+    line-height: 1.2;
     letter-spacing: 0em;
 }
 
 .heading2-white {
     color: #ffffff;
-    font-size: 2.8rem;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0em;
 }
 
 .heading2-black {
     color: #110B11;
-    font-size: 2.8rem;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0em;
 }
 
 .heading3 {
