--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,9 +1,10 @@
+@import "../styles/styles.scss";
 .footer-component {
     margin: auto;
     padding-left: 4vw;
     padding-right: 4vw;
     text-align: center;
-    background-color: #F5F5F5;
+    background-color: $black;
     padding-top: 80px;
     padding-bottom: 80px;
 }
