--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,3 @@
-// @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
 @font-face {
     font-family: "Nimbus-Sans-Regular-Extended";
     src: url("../fonts/Nimbus-Sans-Regular-Extended.ttf");
@@ -21,6 +20,12 @@
 
 $font: "Nimbus-Sans-Regular",
 sans-serif;
+//colors
+$black: #151515;
+$cream: #FFF8EC;
+$blue: #0232BB;
+$pink: #F94C6C;
+$pacific: #20A0B6;
 * {
     -webkit-font-smoothing: antialiased;
     box-sizing: border-box;
@@ -28,78 +33,12 @@ sans-serif;
     padding: 0;
 }
 
+html {
+    background-color: $cream;
+}
+
 html,
 body {
     font-family: $font;
     font-size: 16px;
-}
-
-.banner {
-    display: flex;
-    flex-direction: column;
-}
-
-.banner-title {
-    margin-top: 3.3vw;
-    margin-left: 10vw;
-    width: 60vw;
-}
-
-.banner-image {
-    margin-top: 80px;
-}
-
-.banner-image>img {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-}
-
-.work-section {
-    margin-left: 10vw;
-    margin-top: 4.4vw;
-    margin-bottom: 2.8vw;
-}
-
-.work-heading {
-    width: 50vw;
-}
-
-.work-body {
-    width: 40vw;
-    margin-top: 28px;
-}
-
-.project-grid {
-    margin: 0 auto;
-    padding: 4vw;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 40px;
-    grid-row-gap: 40px;
-    grid-auto-rows: min-content;
-}
-
-.contact-section {
-    display: flex;
-    flex-direction: column;
-    background-color: #1f1f1f;
-    padding-top: 160px;
-    padding-bottom: 160px;
-}
-
-.contact-heading {
-    margin-left: 10vw;
-    width: 50vw;
-}
-
-.contact-body {
-    margin-left: 10vw;
-    width: 40vw;
-    margin-top: 28px;
-}
-
-.contact-button {
-    margin-left: 10vw;
-    margin-top: 32px;
 }
