--- a/src/styles/text-styles.scss
+++ b/src/styles/text-styles.scss
@@ -1,3 +1,4 @@
+@import "../styles/styles.scss";
 .body-white,
 .body-black {
     font-family: 'Nimbus-Sans-Regular', sans-serif;
@@ -11,12 +12,12 @@
 }
 
 .body-black {
-    color: #110B11;
+    color: $black;
 }
 
 .heading1 {
     font-family: 'Nimbus-Sans-Regular-Extended', sans-serif;
-    color: #110B11;
+    color: $black;
     font-size: 5rem;
     line-height: 1.1;
     letter-spacing: 0em;
@@ -35,11 +36,11 @@
 }
 
 .heading2-black {
-    color: #110B11;
+    color: $black;
 }
 
 .heading3 {
-    color: #110B11;
+    color: $black;
     font-size: 2.2rem;
     font-weight: 500;
     line-height: 1.3;
