--- a/src/styles/text-styles.scss
+++ b/src/styles/text-styles.scss
@@ -41,6 +41,7 @@
 
 .heading3 {
     color: $black;
+    font-family: 'Nimbus-Sans-Regular', sans-serif;
     font-size: 2.2rem;
     font-weight: 500;
     line-height: 1.3;
