--- a/src/styles/project-card.scss
+++ b/src/styles/project-card.scss
@@ -24,7 +24,7 @@
 .card-title {
     color: #110B11;
     text-decoration: none;
-    font-family: 'Nimbus-Sans-Regular-Extended', sans-serif;
+    font-family: 'Nimbus-Sans-Regular', sans-serif;
     font-size: 24px;
     line-height: 1.5;
     padding-top: 20px;
