changed project card font size to 1.5rem

--- a/src/styles/project-card.scss
+++ b/src/styles/project-card.scss
@@ -25,7 +25,7 @@
     color: #110B11;
     text-decoration: none;
     font-family: 'Nimbus-Sans-Regular', sans-serif;
-    font-size: 24px;
+    font-size: 1.5rem;
     line-height: 1.5;
     padding-top: 20px;
     padding-bottom: 12px;
