--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,8 +24,9 @@ sans-serif;
 $black: #151515;
 $cream: #FFF8EC;
 $blue: #0232BB;
-$pink: #F94C6C;
 $pacific: #20A0B6;
+$pink: #F94C6C;
+$salmon: #FF92A6;
 * {
     -webkit-font-smoothing: antialiased;
     box-sizing: border-box;
