added contact section styles to global styles

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -43,3 +43,27 @@ body {
     font-family: $font;
     font-size: 16px;
 }
+
+.contact-section {
+    display: flex;
+    flex-direction: column;
+    background-color: $pacific;
+    padding-top: 160px;
+    padding-bottom: 160px;
+}
+
+.contact-heading {
+    margin-left: 10vw;
+    width: 50vw;
+}
+
+.contact-body {
+    margin-left: 10vw;
+    width: 40vw;
+    margin-top: 28px;
+}
+
+.contact-button {
+    margin-left: 10vw;
+    margin-top: 32px;
+}
