--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,6 +5,11 @@
     align-items: center;
     padding-left: 4vw;
     padding-right: 4vw;
+    z-index: 10;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
 }
 
 .header-nav {
