--- a/src/styles/project-x.scss
+++ b/src/styles/project-x.scss
@@ -1,6 +1,9 @@
 .project-header {
     margin: 0 auto;
-    padding: 4vw 10vw;
+    padding-top: 10vw;
+    padding-bottom: 4vw;
+    padding-left: 10vw;
+    padding-right: 10vw;
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
