added secondary button, updated styles.scss, edited index.js

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -22,11 +22,14 @@ $font: "Nimbus-Sans-Regular",
 sans-serif;
 //colors
 $black: #151515;
-$cream: #FFF8EC;
-$blue: #0232BB;
-$pacific: #20A0B6;
-$pink: #F94C6C;
-$salmon: #FF92A6;
+$cream: #fff8ec;
+$blue: #0232bb;
+$pacific: #20a0b6;
+$pink: #f94c6c;
+$salmon: #ff92a6;
+$white: #ffffff;
+$platinum: #edece8;
+$onyx: #3e3e3e;
 * {
     -webkit-font-smoothing: antialiased;
     box-sizing: border-box;
