--- a/src/styles/secondary-button.scss
+++ b/src/styles/secondary-button.scss
@@ -1,28 +1,6 @@
 @import "../styles/styles.scss";
-.primary-button-black>a {
+.secondary-button-black>a {
     width: fit-content;
-    background-color: $black;
-    display: block;
-    text-decoration: none;
-    color: white;
-    font-family: "Nimbus-Sans-Regular-Extended", sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-    letter-spacing: -2%;
-    padding: 28px 60px;
-    border-radius: 100px;
-}
-
-.primary-button-white,
-.primary-button-black {
-    width: fit-content;
-    opacity: 1;
-    transition: opacity 400ms ease-out;
-}
-
-.primary-button-white>a {
-    width: fit-content;
-    background-color: white;
     display: block;
     text-decoration: none;
     color: $black;
@@ -32,9 +10,37 @@
     letter-spacing: -2%;
     padding: 28px 60px;
     border-radius: 100px;
+    border-color: $black;
+    border-style: solid;
+    background-color: transparent;
+    transition: background-color 400ms ease-out;
 }
 
-.primary-button-white:hover,
-.primary-button-black:hover {
-    opacity: 0.9;
+.secondary-button-black,
+.secondary-button-white {
+    width: fit-content;
+}
+
+.secondary-button-white>a {
+    width: fit-content;
+    display: block;
+    text-decoration: none;
+    color: $white;
+    font-family: "Nimbus-Sans-Regular-Extended", sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: -2%;
+    padding: 28px 60px;
+    border-radius: 100px;
+    border-color: $white;
+}
+
+.secondary-button-black>a:hover {
+    background-color: $black;
+    color: $white;
+}
+
+.secondary-button-white:hover {
+    background-color: $white;
+    color: $black;
 }
