working on index

--- a/src/styles/project-card.scss
+++ b/src/styles/project-card.scss
@@ -11,17 +11,17 @@
     text-decoration: none;
 }
 
-.card-image {
+.project-card-image {
     height: 35vw;
 }
 
-.card-image>img {
+.project-card-image>img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.card-title {
+.project-card-title {
     color: #110B11;
     text-decoration: none;
     font-family: 'Nimbus-Sans-Regular', sans-serif;
