--- a/src/styles/navigation-card.scss
+++ b/src/styles/navigation-card.scss
@@ -1,5 +1,18 @@
 @import "../styles/styles.scss";
-.navigation-card {}
+.navigation-card {
+    height: 50vh;
+    background-color: $platinum;
+    border-right-style: solid;
+    border-top-style: solid;
+    border-color: $black;
+    border-width: 1px;
+}
+
+.navigation-card-title,
+.navigation-card-body {
+    margin-left: 40px;
+    margin-right: 40px;
+}
 
 .navigation-card-title {}
 
