--- a/src/styles/navigation-card.scss
+++ b/src/styles/navigation-card.scss
@@ -1,10 +1,10 @@
 @import "../styles/styles.scss";
 .navigation-card {
-    height: 50vh;
+    height: 500px;
     background-color: $platinum;
     border-right-style: solid;
     border-color: $black;
-    border-width: 1px;
+    border-width: 2px;
 }
 
 .navigation-card-title,
