added breakpoints, responsive navigation cards section

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -38,5 +38,11 @@
 .navigation-section {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    @media (max-width: $desktop) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: $tablet) {
+        grid-template-columns: repeat(1, 1fr);
+    }
     grid-column-gap: 0px;
 }
