--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,6 +18,9 @@
     src: url("../fonts/Nimbus-Sans-Regular.woff");
 }
 
+//media
+$desktop:1200px;
+$tablet:768px;
 $font: "Nimbus-Sans-Regular",
 sans-serif;
 //colors
