--- a/src/styles/primary-button.scss
+++ b/src/styles/primary-button.scss
@@ -10,6 +10,9 @@
     font-weight: 500;
     padding: 20px 44px;
     border-radius: 100px;
+    border-color: $black;
+    border-style: solid;
+    border-width: 1px;
     @media (max-width: $mobile) {
         width: auto;
         text-align: center;
@@ -37,9 +40,12 @@
     font-weight: 500;
     padding: 20px 44px;
     border-radius: 100px;
+    border-color: $white;
+    border-style: solid;
+    border-width: 1px;
     @media (max-width: $mobile) {
-        width: auto;
-        text-align: center;
+        font-size: 16px;
+        padding: 16px 16px;
     }
 }
 
