--- a/src/styles/secondary-button.scss
+++ b/src/styles/secondary-button.scss
@@ -15,8 +15,8 @@
     background-color: transparent;
     transition: background-color 400ms ease-out;
     @media (max-width: $mobile) {
-        width: auto;
-        text-align: center;
+        font-size: 16px;
+        padding: 16px 16px;
     }
 }
 
@@ -44,8 +44,8 @@
     background-color: transparent;
     transition: background-color 400ms ease-out;
     @media (max-width: $mobile) {
-        width: auto;
-        text-align: center;
+        font-size: 16px;
+        padding: 16px 16px;
     }
 }
 
