edited work header styles

--- a/src/styles/header-nav-item.scss
+++ b/src/styles/header-nav-item.scss
@@ -1,7 +1,7 @@
 .nav-link>a,
 .nav-action>a {
-    font-family: 'Nimbus-Sans-Regular-Extended', sans-serif;
-    font-size: 16px;
+    font-family: 'Nimbus-Sans-Regular', sans-serif;
+    font-size: 1rem;
     color: #000;
     text-decoration: none;
     opacity: 1;
