--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -53,9 +53,13 @@
 .intro-header-buttons {
     display: flex;
     margin-top: 48px;
+    @media (max-width: $tablet) {
+        margin-top: 40px;
+        margin-bottom: 64px;
+    }
     @media (max-width: $mobile) {
         margin-top: 32px;
-        margin-bottom: 8px;
+        margin-bottom: 64px;
     }
 }
 
