--- a/src/styles/project-card.scss
+++ b/src/styles/project-card.scss
@@ -1,3 +1,4 @@
+@import "../styles/styles.scss";
 .project-card {
     opacity: 1;
     transition: opacity 400ms ease-out;
@@ -13,6 +14,9 @@
 
 .project-card-image {
     height: 35vw;
+    @media (max-width: $tablet) {
+        height: 80vw;
+    }
 }
 
 .project-card-image>img {
@@ -22,7 +26,7 @@
 }
 
 .project-card-title {
-    color: #110B11;
+    color: $black;
     text-decoration: none;
     font-family: 'Nimbus-Sans-Regular', sans-serif;
     font-size: 1.5rem;
