--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,4 +1,8 @@
 @import "../styles/styles.scss";
+html {
+    background-color: $platinum;
+}
+
 .banner {
     display: flex;
     flex-direction: column;
@@ -21,20 +25,16 @@
 }
 
 .work-header-container {
-    // margin-left: 10vw;
-    // margin-top: 4.4vw;
-    // margin-bottom: 2.8vw;
+    margin-left: 4vw;
+    padding-bottom: 2.8vw;
     margin-top: 160px;
-    margin-left: 80px;
     margin-right: 40px;
     @media (max-width: $tablet) {
-        margin-left: 8vw;
-        margin-right: 8vw;
+        padding-bottom: 64px;
     }
 }
 
 .work-header-title {
-    width: 50vw;
     font-size: 2.25rem;
     line-height: 3.125rem;
     color: $black;
@@ -46,10 +46,19 @@
 
 .work-header-body {
     width: 40vw;
-    margin-top: 28px;
+    margin-top: 12px;
     font-size: 1rem;
     line-height: 1.375rem;
     color: $onyx;
+    @media (max-width: $desktop) {
+        width: 60vw;
+    }
+    @media (max-width: $tablet) {
+        width: 80vw;
+    }
+    @media (max-width: $mobile) {
+        width: 90vw;
+    }
 }
 
 .project-grid {
@@ -60,4 +69,9 @@
     grid-column-gap: 40px;
     grid-row-gap: 48px;
     grid-auto-rows: min-content;
+    @media (max-width: $tablet) {
+        grid-template-columns: 1fr;
+        grid-column-gap: 0px;
+        grid-row-gap: 48px;
+    }
 }
