--- a/src/styles/primary-button.scss
+++ b/src/styles/primary-button.scss
@@ -14,8 +14,8 @@
     border-style: solid;
     border-width: 1px;
     @media (max-width: $mobile) {
-        width: auto;
-        text-align: center;
+        font-size: 16px;
+        padding: 16px 24px;
     }
 }
 
@@ -45,7 +45,7 @@
     border-width: 1px;
     @media (max-width: $mobile) {
         font-size: 16px;
-        padding: 16px 16px;
+        padding: 16px 24px;
     }
 }
 
