added menu and cross ions, menu styles

--- a/src/styles/header-nav-item.scss
+++ b/src/styles/header-nav-item.scss
@@ -1,4 +1,8 @@
 @import "../styles/styles.scss";
+.nav-link {
+    z-index: 100;
+}
+
 .nav-link>a,
 .nav-action>a {
     font-family: 'Nimbus-Sans-Regular', sans-serif;
