--- a/src/styles/header-nav-item.scss
+++ b/src/styles/header-nav-item.scss
@@ -11,6 +11,10 @@
     text-decoration: none;
     opacity: 1;
     transition: opacity 400ms ease-out;
+    @media (max-width: $tablet) {
+        font-size: 1.8rem;
+        color: $white;
+    }
 }
 
 .nav-link>a:hover,
