--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -11,6 +11,7 @@
         right: 0;
         left: 0;
         top: 0;
+        @media (max-width: $tablet) {}
     }
     
     .header-menu-button {
@@ -18,6 +19,8 @@
     }
     
     .header-menu-button>button {
+        width: 44px;
+        height: 44px;
         z-index: 100;
         background: transparent;
         border: transparent;
@@ -40,14 +43,20 @@
     
     .header-menu-nav {
         z-index: 50;
-        position: absolute;
-        height: 100vh;
-        width: 100vw;
-        background-color: yellow;
-        display: grid;
+        background-color: $black;
+        display: flex;
+        flex-direction: column;
         grid-template-rows: repeat(5, auto);
-        grid-row-gap: 40px;
+        grid-row-gap: 48px;
         align-items: center;
+        justify-content: center;
+        bottom: 0;
+        left: 0;
+        height: 100vh;
+        position: fixed;
+        right: 0;
+        top: 0;
+        width: 100vw;
     }
     
     .social-media {
@@ -56,6 +65,10 @@
         grid-column-gap: 0px;
         width: 80px;
         margin: auto;
+        @media (max-width: $tablet) {
+            width: auto;
+            grid-column-gap: 8px;
+        }
     }
     
     .social-media>a {
@@ -65,6 +78,11 @@
         width: 40px;
         opacity: 1;
         transition: opacity 400ms ease-out;
+        @media (max-width: $tablet) {
+            align-items: center;
+            height: 44px;
+            width: 44px;
+        }
     }
     
     .social-media>a:hover {
